[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]

[node name="Game" type="Node" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true
[connection signal="hit_by_projectile" from="Player" to="." method="_on_Player_hit_by_projectile"]
[connection signal="killed_enemy" from="Player" to="." method="_on_Player_killed_enemy"]
[connection signal="buttonPressed" from="HUD" to="." method="_on_HUD_buttonPressed"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
